--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "^6.1.1",
     "@angular/platform-browser-dynamic": "^6.1.1",
     "@angular/router": "^6.1.1",
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.6",
     "ngx-pipes": "^2.3.5",
     "rxjs": "^6.2.2",
