--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "@angular/platform-browser": "^6.1.1",
     "@angular/platform-browser-dynamic": "^6.1.1",
     "@angular/router": "^6.1.1",
+    "@auth0/angular-jwt": "^2.0.0",
+    "@types/jquery": "^3.2.12",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^8.3.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.6",
+    "ng2-daterangepicker": "^2.0.12",
     "ngx-pipes": "^2.3.5",
     "rxjs": "^6.2.2",
     "zone.js": "^0.8.19"
